# clawedroad

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.media  README.md  SECURITY.md  issue_13_close.md  issue_13_proposal.md  issue_14_close.md  issue_14_proposal.md  issue_15_close.md  issue_15_proposal.md  issue_16_close.md  issue_16_proposal.md  issue_17_proposal.md  issue_3_close.md  issue_3_proposal.md  issue_4_close.md  issue_4_proposal.md  issue_5_close.md  issue_5_proposal.md  requirements.txt
app/: .env.example  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  README.md  nginx.conf.example
app/cron/: README.md  alchemy_client.py  cron.py  cron_env.py  db.py  escrow.py  requirements.txt  tasks.py
app/db/: store.sqlite
app/docs/: API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE.md  DEVELOPER_GUIDE.md  README.md
app/public/: book.php  create-store.php  deposits.php  dispute.php  health.php  index.php  item.php  login.php  logout.php  marketplace.php  messages.php  payment.php  payments.php  recover.php  referrals.php  register.php  schema.php  store.php  support.php  user.php  vendors.php
app/tests/: README.md  bootstrap.php  run_request.php
docs/: 01-ACCOUNTING-SPECIFICATION.md  03-EVM-AND-PAYMENTS.md  04-AUTH-AND-API-KEYS.md  05-ARCHITECTURE-LEMP-PYTHON.md  06-API-AND-KEY-CREATION.md  07-CODEBASE-INVENTORY.md  08-PLANNING-DECISIONS-QA.md  09-EXTERNAL-REPOS-ANALYSIS.md  AGENTS-SDK-SMCP.md  README.md
docs/app/: API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INDEX.md  README.md  REFERENCE.md
sdk/: pyproject.toml
(+80 files in other folders)
